hphp/test/zend/good/Zend/tests/variadic/non_variadic_implements_variadic_error.php.expectf

Fatal error: Declaration of MySQL::query() must be compatible with that of DB::query() in %s/non_variadic_implements_variadic_error.php on line 7
